# trading-engine-CPP

./: CMakeLists.txt  market_data.db  run.sh
data/: MarketData.txt  account_balance.txt  prices.csv
src/: Engine.cpp  Engine.h  PriceBar.h  Strategy.cpp  Strategy.h  Utility.cpp  Utility.h  main.cpp
src/TradingHandle/: .MarketInterface.py.swp  MarketInterface.py
